--- a/abstrak/abstrak-en.tex
+++ b/abstrak/abstrak-en.tex
@@ -16,10 +16,10 @@
 
 \noindent
 \begin{tabularx}{\textwidth}{l >{\centering}m{3em} X}
-  \textbf{Name / NRP}   & : & \textbf{\name{} - \nrp{}} \\
-  \textbf{Department}   & : & \textbf{\engdepartment{}} \\
-  \textbf{Advisor I}   & : & \textbf{\advisor{}}       \\
-  \textbf{Advisor II}  & : & \textbf{\coadvisor{}}     \\
+  \textbf{Name / NRP} & : & \textbf{\name{} / \nrp{}} \\
+  \textbf{Department} & : & \textbf{\engdepartment{}} \\
+  \textbf{Advisor I}  & : & \textbf{\advisor{}}       \\
+  \textbf{Advisor II} & : & \textbf{\coadvisor{}}     \\
 \end{tabularx}
 \endgroup
 
@@ -27,9 +27,11 @@
 \textbf{Abstract}
 
 % Ubah paragraf berikut dengan abstrak dari tugas akhir dalam Bahasa Inggris
-In this research, we proposed \lipsum[1]
+
+
+% In this research, we proposed \lipsum[1]
 
 \vspace{2ex}
 % Ubah kata-kata berikut dengan kata kunci dari tugas akhir dalam Bahasa Inggris
 \noindent
-\textbf{Keywords: \emph{multi-tenancy}, \emph{virtual-machine}, \emph{Kubernetes}, \emph{virtual-cluster}.}
+\textbf{Keywords: \emph{Multi-Tenancy}, \emph{Virtual Machine}, Kubernetes, \emph{Virtual Cluster}.}
