--- a/abstrak/abstrak-id.tex
+++ b/abstrak/abstrak-id.tex
@@ -16,7 +16,7 @@
 
 \noindent
 \begin{tabularx}{\textwidth}{l >{\centering}m{2em} X}
-  \textbf{Nama Mahasiswa / NRP} & : & \textbf{\name{} - \nrp{}} \\
+  \textbf{Nama / NRP}           & : & \textbf{\name{} / \nrp{}} \\
   \textbf{Departemen}           & : & \textbf{\department{}}    \\
   \textbf{Dosen Pembimbing I}   & : & \textbf{\advisor{}}       \\
   \textbf{Dosen Pembimbing II}  & : & \textbf{\coadvisor{}}     \\
@@ -27,9 +27,14 @@
 \textbf{Abstrak}
 
 % Ubah paragraf berikut dengan abstrak dari tugas akhir
-Pada penelitian ini kami mengajukan \lipsum[1]
+Sumber daya komputasi tidak selalu digunakan.
+Sumber daya komputasi terkadang berada pada posisi
+\emph{idle} dan dapat sewaktu-waktu digunakan kembali.
+
+% Pada penelitian ini kami mengajukan sistem \emph{provisioning}
+% \emph{virtual cluster} yang dapat diciptakan sewaktu-waktu.
 
 \vspace{2ex}
 % Ubah kata-kata berikut dengan kata kunci dari tugas akhir
 \noindent
-\textbf{Kata Kunci: \emph{multi-tenancy}, \emph{virtual machine}, Kubernetes, \emph{virtual-cluster}.}
+\textbf{Kata Kunci: \emph{Multi-Tenancy}, \emph{Virtual Machine}, Kubernetes, \emph{Virtual Cluster}.}
