--- a/bab/4-hasil-pembahasan.tex
+++ b/bab/4-hasil-pembahasan.tex
@@ -261,7 +261,7 @@ yang sama.
 
 Pada subbab pengujian ini, akan dibuat sebuah klaster yang terdiri dari dua
 \emph{virtual machine} yang berada di dua komputer fisik yang berbeda. Pada gambar
-\ref{fig:nodes-2-komputer-berbeda}, klaster tersebut memiliki \emph{nodes} yang
+\ref{fig:nodes-2-komputer-berbeda-1}, klaster tersebut memiliki \emph{nodes} yang
 bernama eovugekt dan gxlshrqm. Komputer fisik dari dua \emph{virtual machine}
 tersebut dapat dilihat pada gambar \ref{fig:vm-komputer-fisik-1}.
 
@@ -322,6 +322,8 @@ saat membuat \emph{virtual machine} dan \emph{virtual machine} sudah terbuat,
   caption={Kode Sumber Penghapusan \emph{Virtual Machine}},
   label={lst:vm-delete-function}
 ]{program/delete-vm.go}
+
+\clearpage
 
 \lstinputlisting[
   language=go,
