--- a/pustaka/variables.tex
+++ b/pustaka/variables.tex
@@ -23,7 +23,7 @@
 \newcommand{\headofdepartmentnip}{19810620 200501 1 003}
 
 % judul
-\newcommand{\tatitle}{IMPLEMENTASI \emph{MULTI-TENANCY} UNTUK PROVISIONING KLASTER KUBERNETES}
+\newcommand{\tatitle}{IMPLEMENTASI \emph{MULTI-TENANCY} UNTUK \emph{PROVISIONING} KLASTER KUBERNETES}
 \newcommand{\engtatitle}{\emph{MULTI-TENANCY IMPLEMENTATION FOR KUBERNETES CLUSTER PROVISIONING}}
 
 % tempat
