--- a/sampul/konten-id-dalam.tex
+++ b/sampul/konten-id-dalam.tex
@@ -6,8 +6,7 @@
 
 \begin{spacing}{1.5}
   \begin{Large}
-    IMPLEMENTASI \emph{MULTI-TENANCY} UNTUK \\
-    \emph{PROVISIONING} KLASTER KUBERNETES
+    \tatitle{}
   \end{Large}
 \end{spacing}
 
